# consoleme/lib/v2/requests.py
@@ -10,7 +10,11 @@ from policy_sentry.util.arns import parse_arn
 
 from consoleme.config import config
 from consoleme.exceptions.exceptions import InvalidRequestParameter
-from consoleme.lib.aws import get_resource_account
+from consoleme.lib.aws import (
+    get_resource_account,
+    get_resource_policy,
+    update_resource_policy,
+)
 from consoleme.lib.plugins import get_plugin_by_name
 from consoleme.lib.policies import invalid_characters_in_policy
 from consoleme.lib.v2.roles import get_role_details
@@ -69,6 +73,9 @@ async def generate_request_from_change_model_array(
     resource_policy_changes = []
     assume_role_policy_changes = []
 
+    extended_request_uuid = str(uuid.uuid4())
+    incremental_change_id = 0
+
     for change in change_models.changes:
         # Enforce a maximum of one principal ARN per ChangeGeneratorModelArray (aka Policy Request)
         if not primary_principal_arn:
@@ -86,6 +93,10 @@ async def generate_request_from_change_model_array(
             managed_policy_changes.append(change)
         elif change.change_type == ChangeType.resource_policy:
             change.autogenerated = False
+            change.sourceChangeID = None
+            # Currently we don't support resource policy changes submitted by customer
+            # TODO: change to True when we add support for these
+            change.supported = False
             resource_policy_changes.append(change)
         elif change.change_type == ChangeType.assume_role_policy:
             assume_role_policy_changes.append(change)
@@ -93,7 +104,8 @@ async def generate_request_from_change_model_array(
         # All changes status must be not-applied at request creation
         change.status = Status.not_applied
         # Add ID for each change
-        change.id = str(uuid.uuid4())
+        change.id = extended_request_uuid + str(incremental_change_id)
+        incremental_change_id += 1
 
     # Make sure the requester is only ever 64 chars with domain
     if len(user) > 64:
@@ -144,7 +156,7 @@ async def generate_request_from_change_model_array(
         + assume_role_policy_changes
     )
     extended_request = ExtendedRequestModel(
-        id=str(uuid.uuid4()),
+        id=extended_request_uuid,
         arn=primary_principal_arn,
         timestamp=int(time.time()),
         justification=request_creation.justification,
@@ -264,6 +276,7 @@ async def generate_resource_policies(extended_request: ExtendedRequestModel, use
                             change_type=ChangeType.resource_policy,
                             principal_arn=extended_request.arn,
                             status=Status.not_applied,
+                            sourceChangeID=policy_change.id,
                             id=str(uuid.uuid4()),
                             resources=[primary_principal_resource_model],
                             autogenerated=True,
@@ -676,3 +689,90 @@ async def populate_old_policies(extended_request: ExtendedRequestModel, user: st
     log_data["message"] = "Done populating old policies"
     log_data["request"] = extended_request.dict()
     log.debug(log_data)
+
+
+async def populate_cross_account_resource_policies(
+    extended_request: ExtendedRequestModel, user: str
+) -> bool:
+    """
+        Populates the cross-account resource policies for supported resources for each inline policy.
+        :param extended_request: ExtendedRequestModel
+        :param user: username
+        :return: changed: whether the resource policies have changed or not
+    """
+
+    log_data: dict = {
+        "function": f"{__name__}.{sys._getframe().f_code.co_name}",
+        "user": user,
+        "arn": extended_request.arn,
+        "request": extended_request.dict(),
+        "message": "Populating cross-account resource policies",
+    }
+    log.debug(log_data)
+
+    supported_resource_policies = config.get(
+        "policies.supported_resource_types_for_policy_application", []
+    )
+    resource_policies_changed = False
+    for change in extended_request.changes.changes:
+        if change.change_type == ChangeType.resource_policy and change.autogenerated:
+            # autogenerated resource policy change
+            resource_arn_parsed = parse_arn(change.arn)
+            resource_type = resource_arn_parsed["service"]
+            resource_name = resource_arn_parsed["resource"]
+            resource_region = resource_arn_parsed["region"]
+            resource_account = resource_arn_parsed["account"]
+            if not resource_account:
+                resource_account = await get_resource_account(change.arn)
+            if resource_type in supported_resource_policies:
+                change.supported = True
+            else:
+                change.supported = False
+            old_policy = await get_resource_policy(
+                account=resource_account,
+                resource_type=resource_type,
+                name=resource_name,
+                region=resource_region,
+            )
+            old_policy_sha256 = sha256(json.dumps(old_policy).encode()).hexdigest()
+            if (
+                change.old_policy
+                and old_policy_sha256 == change.old_policy.policy_sha256
+            ):
+                # Old policy hasn't changed since last refresh of page, no need to generate resource policy again
+                continue
+            # Otherwise it has changed, regenerate the resource policies
+            resource_policies_changed = True
+            change.old_policy = PolicyModel(
+                policy_sha256=old_policy_sha256, policy_document=old_policy,
+            )
+            # Have to grab the actions from the source inline change
+            actions = []
+            for source_change in extended_request.changes.changes:
+                # Find the specific inline policy associated with this change
+                if (
+                    source_change.change_type == ChangeType.inline_policy
+                    and source_change.id == change.sourceChangeID
+                ):
+                    for statement in source_change.policy.policy_document.get(
+                        "Statement", []
+                    ):
+                        # Find the specific statement within the inline policy associated with this resource
+                        if change.arn in statement.get("Resource"):
+                            actions.extend(statement.get("Action", []))
+            new_policy = await update_resource_policy(
+                existing=old_policy,
+                principal_arn=extended_request.arn,
+                resource_arns=[change.arn],
+                actions=actions,
+            )
+            new_policy_sha256 = sha256(json.dumps(new_policy).encode()).hexdigest()
+            change.policy = PolicyModel(
+                policy_sha256=new_policy_sha256, policy_document=new_policy,
+            )
+
+    log_data["message"] = "Done populating cross account resource policies"
+    log_data["request"] = extended_request.dict()
+    log_data["resource_policies_changed"] = resource_policies_changed
+    log.debug(log_data)
+    return resource_policies_changed
