# consoleme/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2020-07-28T20:55:48+00:00
+#   timestamp: 2020-08-03T17:50:10+00:00
 
 from __future__ import annotations
 
@@ -378,6 +378,14 @@ class ResourcePolicyChangeModel(ChangeModel):
         regex="(^arn:([^:]*):([^:]*):([^:]*):(|\*|[\d]{12}|cloudfront|aws):(.+)$)|^\*$"
     )
     autogenerated: Optional[bool] = False
+    sourceChangeID: Optional[str] = Field(
+        None,
+        description="the change model ID of the source change, that this change was generated from",
+    )
+    supported: Optional[bool] = Field(
+        None,
+        description="whether we currently support this type of resource policy change or not",
+    )
     policy: PolicyModel
     old_policy: Optional[PolicyModel] = None
 
